# le_audio_synthesizer

./: .gitignore  BLOG.md  CMakeLists.txt  Kconfig  License.txt  README.md  README.rst  Untitled Diagram.drawio  notes.md  overlay-central.conf  overlay-debug.conf  overlay-release.conf  prj.conf  program.py  report.md  sample.yaml
assets/: devices.drawio  synth_flowchart.drawio
scripts/: drift.py  dsp_reverb.py  note_to_freq.py  test.py  waveform_sine.py
src/: main.c
src/audio/: CMakeLists.txt  Kconfig  audio_codec.c  audio_codec.h  audio_generate.c  audio_generate.h  audio_process.c  audio_process.h  audio_sync_timer.c  audio_sync_timer.h  stream_control.c  stream_control.h  sw_codec.c  sw_codec_select.c  sw_codec_select.h  tick_provider.c  tick_provider.h
src/bluetooth/: CMakeLists.txt  Kconfig  ble_acl_common.c  ble_acl_common.h  ble_acl_gateway.c  ble_acl_gateway.h  ble_audio_services.c  ble_connection.c  ble_connection.h  ble_discovered.c  ble_discovered.h  ble_hci_vsc.c  ble_hci_vsc.h  ble_transmit.c  ble_transmit.h
src/dsp/: CMakeLists.txt  Kconfig  effect_envelope.c  effect_modulation.c  effect_modulation.h  instrument.c  instrument.h  oscillator.c  oscillator.h  waveforms.c  waveforms.h
src/input/: CMakeLists.txt  Kconfig  button.c  button.h  key_assign.c  key_assign.h
src/io/: CMakeLists.txt  button.c  button.h  led.c  led.h
src/synthesizer/: CMakeLists.txt  Kconfig  arpeggio.c  arpeggio.h  arpeggio.md  instrument.c  instrument.h  key_assign.c  key_assign.h  synthesizer.c  synthesizer.h
src/synthesizer/dsp/: CMakeLists.txt  Kconfig  effect_echo.c  effect_echo.h  effect_envelope.c  effect_envelope.h  effect_modulation.c  effect_modulation.h  filter_allpass.c  filter_allpass.h  oscillator.c  oscillator.h  reverb.md  waveforms.c  waveforms.h
src/utils/: CMakeLists.txt  dsp_instructions.h  integer_math.h  midi_note_to_frequency.h
src/utils/macros/: macros_common.h
